# RAG

./: .gitignore  cv.md  experiment.ipynb  pyproject.toml  requirements.txt  temp.py
.github/workflows/: python-app.yml
cli/: fuzzy_open.py  handlers.py  helpers.py  keyword_search_cli.py  keyword_search_utils.py  search_json.py  semantic_search_cli.py  test_helpers.py
cli/lib/: semantic_search.py
