[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk==3.9.1",
    "numpy>=2.4.0",
    "pathlib>=1.0.1",
    "patlib>=0.3.7",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.0",
]
